[gd_scene load_steps=44 format=3 uid="uid://c402cxraasnvw"]

[ext_resource type="Script" path="res://Entities/Enemies/Volva/volva.gd" id="1_206fx"]
[ext_resource type="Script" path="res://Entities/Enemies/Volva/volva_state_machine.gd" id="1_fjf1g"]
[ext_resource type="Script" path="res://Entities/Enemies/Volva/volva_state_patrol.gd" id="2_27k5n"]
[ext_resource type="Script" path="res://Components/Hurtbox/hurtbox.gd" id="2_p77k8"]
[ext_resource type="Texture2D" uid="uid://cwosp8wkbrsdp" path="res://Entities/Player/Player Assets/Back Left Step (2).png" id="2_rdyol"]
[ext_resource type="Texture2D" uid="uid://cela5jlyc1mbw" path="res://Entities/Player/Player Assets/Back Right Step (1).png" id="3_8pj2r"]
[ext_resource type="Script" path="res://Components/StatComponents/SpeedComponent/speed_component.gd" id="3_nesic"]
[ext_resource type="Script" path="res://Components/StatComponents/HealthComponent/health_component.gd" id="4_7wm38"]
[ext_resource type="Texture2D" uid="uid://b8epfdclvgyan" path="res://Entities/Player/Player Assets/Back Standing.png" id="4_84pg2"]
[ext_resource type="Texture2D" uid="uid://cbff7napedsin" path="res://Entities/Player/Player Assets/Back Sword Raise.png" id="5_pfsei"]
[ext_resource type="Texture2D" uid="uid://c6a82d673lfia" path="res://Entities/Player/Player Assets/Back Sword Slash.png" id="6_qo41f"]
[ext_resource type="Texture2D" uid="uid://bc773e3m4bxmy" path="res://Entities/Player/Player Assets/Front Left Step (2).png" id="7_6phxk"]
[ext_resource type="Script" path="res://Components/PatrolAreaComponent/patrol_area_component.gd" id="7_mul5g"]
[ext_resource type="Texture2D" uid="uid://p01rqeb7rjp3" path="res://Entities/Player/Player Assets/Front Right Step (1).png" id="8_m1n0a"]
[ext_resource type="Texture2D" uid="uid://c0xxl101yx18c" path="res://Entities/Player/Player Assets/Front Standing.png" id="9_40cfw"]
[ext_resource type="Texture2D" uid="uid://bq2m0tro3jjxs" path="res://Entities/Player/Player Assets/Front Sword Raise.png" id="10_qsxot"]
[ext_resource type="Texture2D" uid="uid://du0kgkulhhoem" path="res://Entities/Player/Player Assets/Front Sword Slash.png" id="11_53rdd"]
[ext_resource type="Texture2D" uid="uid://dagudkk0ht6mx" path="res://Entities/Player/Player Assets/Left Side Standing.png" id="12_8cy1l"]
[ext_resource type="Texture2D" uid="uid://s218ljaq0pq5" path="res://Entities/Player/Player Assets/Left Side Step.png" id="13_vbqbb"]
[ext_resource type="Texture2D" uid="uid://5p8vupdrb838" path="res://Entities/Player/Player Assets/Left Side Sword Raise.png" id="14_0r3mv"]
[ext_resource type="Texture2D" uid="uid://d4c65nattla50" path="res://Entities/Player/Player Assets/Left Side Sword Slash.png" id="15_7oi4c"]
[ext_resource type="Texture2D" uid="uid://cwdl175gklklx" path="res://Entities/Player/Player Assets/Right Side Standing.png" id="16_jixmg"]
[ext_resource type="Texture2D" uid="uid://ctgnuenya7i43" path="res://Entities/Player/Player Assets/Right Side Step.png" id="17_i76fs"]
[ext_resource type="Texture2D" uid="uid://bsv7oe0v40apx" path="res://Entities/Player/Player Assets/Right Side Sword Raise.png" id="18_3ayge"]
[ext_resource type="Texture2D" uid="uid://lwau0hxj4s6x" path="res://Entities/Player/Player Assets/Right Side Sword Slash.png" id="19_lkmcl"]
[ext_resource type="Script" path="res://Entities/Enemies/Volva/volva_state_attack.gd" id="25_qkjd3"]
[ext_resource type="Script" path="res://Entities/Enemies/Volva/volva_state_chase.gd" id="26_0f32c"]
[ext_resource type="Script" path="res://Components/RaycastComponent/raycast_component.gd" id="28_imw3x"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lh72k"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rdyol")
}, {
"duration": 1.0,
"texture": ExtResource("3_8pj2r")
}, {
"duration": 1.0,
"texture": ExtResource("4_84pg2")
}, {
"duration": 1.0,
"texture": ExtResource("5_pfsei")
}, {
"duration": 1.0,
"texture": ExtResource("6_qo41f")
}, {
"duration": 1.0,
"texture": ExtResource("7_6phxk")
}, {
"duration": 1.0,
"texture": ExtResource("8_m1n0a")
}, {
"duration": 1.0,
"texture": ExtResource("9_40cfw")
}, {
"duration": 1.0,
"texture": ExtResource("10_qsxot")
}, {
"duration": 1.0,
"texture": ExtResource("11_53rdd")
}, {
"duration": 1.0,
"texture": ExtResource("12_8cy1l")
}, {
"duration": 1.0,
"texture": ExtResource("13_vbqbb")
}, {
"duration": 1.0,
"texture": ExtResource("14_0r3mv")
}, {
"duration": 1.0,
"texture": ExtResource("15_7oi4c")
}, {
"duration": 1.0,
"texture": ExtResource("16_jixmg")
}, {
"duration": 1.0,
"texture": ExtResource("17_i76fs")
}, {
"duration": 1.0,
"texture": ExtResource("18_3ayge")
}, {
"duration": 1.0,
"texture": ExtResource("19_lkmcl")
}],
"loop": true,
"name": &"sprite_frames",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3i50s"]
radius = 24.0
height = 80.0

[sub_resource type="Animation" id="Animation_nw0mn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_swhso"]
resource_name = "idle_down"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_0arq6"]
resource_name = "idle_left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_8tdj0"]
resource_name = "idle_right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="Animation" id="Animation_rph72"]
resource_name = "idle_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_kinqa"]
resource_name = "move_down"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 6, 7, 5]
}

[sub_resource type="Animation" id="Animation_me47q"]
resource_name = "move_left"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 10, 11]
}

[sub_resource type="Animation" id="Animation_mah2e"]
resource_name = "move_right"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 14, 15]
}

[sub_resource type="Animation" id="Animation_y2ghc"]
resource_name = "move_up"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 1, 2, 0]
}

[sub_resource type="Animation" id="Animation_vq0ts"]
resource_name = "summon"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.4, 0, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2jb06"]
_data = {
"RESET": SubResource("Animation_nw0mn"),
"idle_down": SubResource("Animation_swhso"),
"idle_left": SubResource("Animation_0arq6"),
"idle_right": SubResource("Animation_8tdj0"),
"idle_up": SubResource("Animation_rph72"),
"move_down": SubResource("Animation_kinqa"),
"move_left": SubResource("Animation_me47q"),
"move_right": SubResource("Animation_mah2e"),
"move_up": SubResource("Animation_y2ghc"),
"summon": SubResource("Animation_vq0ts")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_00dd8"]
radius = 256.125

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fu2vx"]
radius = 24.0
height = 80.0

[node name="Volva" type="CharacterBody2D"]
script = ExtResource("1_206fx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-9.53674e-07, 9.53674e-07)
scale = Vector2(0.0866667, 0.0866667)
sprite_frames = SubResource("SpriteFrames_lh72k")
animation = &"sprite_frames"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3i50s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2jb06")
}

[node name="RaycastComponent" type="RayCast2D" parent="."]
script = ExtResource("28_imw3x")

[node name="PatrolAreaComponent" type="Area2D" parent="."]
script = ExtResource("7_mul5g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PatrolAreaComponent"]
shape = SubResource("CircleShape2D_00dd8")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "owner_node")]
script = ExtResource("2_p77k8")
health_component = NodePath("../HealthComponent")
owner_node = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_fu2vx")

[node name="VolvaStateMachine" type="Node" parent="."]
script = ExtResource("1_fjf1g")

[node name="VolvaStatePatrol" type="Node" parent="VolvaStateMachine" node_paths=PackedStringArray("speed_component")]
script = ExtResource("2_27k5n")
speed_component = NodePath("../../SpeedComponent")

[node name="VolvaStateChase" type="Node" parent="VolvaStateMachine"]
script = ExtResource("26_0f32c")

[node name="VolvaStateAttack" type="Node" parent="VolvaStateMachine"]
script = ExtResource("25_qkjd3")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_7wm38")

[node name="SpeedComponent" type="Node" parent="."]
script = ExtResource("3_nesic")
speed = 100.0
